[gd_scene load_steps=62 format=3 uid="uid://dhmt1m718x5qp"]

[ext_resource type="Script" path="res://Levels/LevelManager.gd" id="1_ptxdy"]
[ext_resource type="PackedScene" uid="uid://biugc7jiaj06x" path="res://World/GroundTilemap.tscn" id="2_go2fb"]
[ext_resource type="Script" path="res://Enemies/EnemyManager.gd" id="3_gg80f"]
[ext_resource type="Texture2D" uid="uid://c77cnafjrdrsl" path="res://GroundTiles/Decorations/detail_crystalLarge_E.png" id="3_oyqwh"]
[ext_resource type="Script" path="res://Levels/Path.gd" id="3_yxbnk"]
[ext_resource type="PackedScene" uid="uid://dq5otudm77au1" path="res://Towers/TowerManager.tscn" id="4_0nnn7"]
[ext_resource type="Texture2D" uid="uid://crn1w6swugq00" path="res://GroundTiles/Decorations/detail_dirtLarge_N.png" id="4_by1cd"]
[ext_resource type="Script" path="res://Enemies/Spawner.gd" id="5_k4o1p"]
[ext_resource type="Texture2D" uid="uid://y048tqsq0x4p" path="res://GroundTiles/Decorations/detail_dirtLarge_S.png" id="5_vinl2"]
[ext_resource type="PackedScene" uid="uid://ckapmihl1c8vg" path="res://GUI/GUI.tscn" id="6_lr0f1"]
[ext_resource type="Texture2D" uid="uid://draylxxpsiypv" path="res://GroundTiles/Decorations/detail_dirtLarge_W.png" id="6_ydkmn"]
[ext_resource type="PackedScene" uid="uid://hj6qg5kef8ea" path="res://GUI/TowerSelectPanel.tscn" id="7_hdo0l"]
[ext_resource type="Texture2D" uid="uid://djrsqklmxfgpg" path="res://GroundTiles/Decorations/detail_dirt_E.png" id="7_qdtrj"]
[ext_resource type="Texture2D" uid="uid://bursjtda2vk0o" path="res://GroundTiles/Decorations/detail_dirt_N.png" id="8_0s3qc"]
[ext_resource type="PackedScene" uid="uid://dhib44oiejfwd" path="res://Towers/CrossbowTower.tscn" id="8_3xcyr"]
[ext_resource type="Texture2D" uid="uid://cyrsv312vwgvx" path="res://GroundTiles/Decorations/detail_dirt_S.png" id="9_7ucmk"]
[ext_resource type="PackedScene" uid="uid://mst7r7t0j2es" path="res://Towers/MageTower.tscn" id="9_nsuvv"]
[ext_resource type="Texture2D" uid="uid://66ry26t76gsx" path="res://GroundTiles/Decorations/detail_dirt_W.png" id="10_3b6wd"]
[ext_resource type="PackedScene" uid="uid://c0tautgj7cheu" path="res://Towers/MortarTower.tscn" id="10_k873e"]
[ext_resource type="Script" path="res://GUI/LevelWonPopup.gd" id="11_6jv2p"]
[ext_resource type="Texture2D" uid="uid://b8fyyjunfe77a" path="res://GroundTiles/Decorations/detail_rocksLarge_E.png" id="11_e2sqo"]
[ext_resource type="Texture2D" uid="uid://c30kanqtlf4cj" path="res://GroundTiles/Decorations/detail_rocksLarge_N.png" id="12_4wmcu"]
[ext_resource type="Script" path="res://GUI/GameOverPopup.gd" id="12_oow63"]
[ext_resource type="Texture2D" uid="uid://cfh0ifo5eu4aj" path="res://GroundTiles/Decorations/detail_rocksLarge_S.png" id="13_stilk"]
[ext_resource type="Texture2D" uid="uid://d166hlyfjrmij" path="res://GroundTiles/Decorations/detail_crystalLarge_N.png" id="14_mkwr3"]
[ext_resource type="Texture2D" uid="uid://cqpcln65rsi4v" path="res://GroundTiles/Decorations/detail_rocksLarge_W.png" id="15_gybsj"]
[ext_resource type="Texture2D" uid="uid://cdhy7cqugtd2h" path="res://GroundTiles/Decorations/detail_rocks_E.png" id="16_2tksk"]
[ext_resource type="Texture2D" uid="uid://bcv35rjxusxjn" path="res://GroundTiles/Decorations/detail_rocks_N.png" id="17_05m6f"]
[ext_resource type="Texture2D" uid="uid://bofujvuolmags" path="res://GroundTiles/Decorations/detail_rocks_S.png" id="18_0njcp"]
[ext_resource type="Texture2D" uid="uid://cyvf6rx153s2d" path="res://GroundTiles/Decorations/detail_rocks_W.png" id="19_pqe3v"]
[ext_resource type="Texture2D" uid="uid://vyrxpdfuj4dp" path="res://GroundTiles/Decorations/detail_treeLarge_E.png" id="20_kxs8x"]
[ext_resource type="Texture2D" uid="uid://bes047itom3qu" path="res://GUI/detail_crystal_E.png" id="20_xm6x0"]
[ext_resource type="Texture2D" uid="uid://6jq6lunxhg22" path="res://GroundTiles/Decorations/detail_tree_E.png" id="24_64iqy"]
[ext_resource type="Texture2D" uid="uid://c2ilarfkbws5p" path="res://GroundTiles/Decorations/detail_crystalLarge_S.png" id="25_68ni3"]
[ext_resource type="Texture2D" uid="uid://32nwiiej1yfx" path="res://GroundTiles/Decorations/detail_crystalLarge_W.png" id="29_1s16g"]
[ext_resource type="Texture2D" uid="uid://cpki673faeh62" path="res://GroundTiles/Decorations/detail_dirtLarge_E.png" id="34_e1d0o"]
[ext_resource type="Script" path="res://GUI/NextWaveButton.gd" id="37_1m24x"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_h1anl"]
texture = ExtResource("3_oyqwh")
texture_region_size = Vector2i(128, 64)
1:4/size_in_atlas = Vector2i(2, 2)
1:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7sbks"]
texture = ExtResource("14_mkwr3")
texture_region_size = Vector2i(128, 64)
1:4/size_in_atlas = Vector2i(2, 2)
1:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jk7s7"]
texture = ExtResource("8_0s3qc")
texture_region_size = Vector2i(128, 64)
1:4/size_in_atlas = Vector2i(2, 2)
1:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_87815"]
texture = ExtResource("9_7ucmk")
texture_region_size = Vector2i(128, 64)
1:4/size_in_atlas = Vector2i(2, 2)
1:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pialb"]
texture = ExtResource("10_3b6wd")
texture_region_size = Vector2i(128, 64)
1:4/size_in_atlas = Vector2i(2, 2)
1:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dypqt"]
texture = ExtResource("11_e2sqo")
texture_region_size = Vector2i(128, 64)
1:4/size_in_atlas = Vector2i(2, 2)
1:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nd474"]
texture = ExtResource("12_4wmcu")
texture_region_size = Vector2i(128, 64)
1:4/size_in_atlas = Vector2i(2, 2)
1:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_c2wxs"]
texture = ExtResource("13_stilk")
texture_region_size = Vector2i(128, 64)
1:4/size_in_atlas = Vector2i(2, 2)
1:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_86vqb"]
texture = ExtResource("15_gybsj")
texture_region_size = Vector2i(128, 64)
1:4/size_in_atlas = Vector2i(2, 2)
1:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8uau0"]
texture = ExtResource("16_2tksk")
texture_region_size = Vector2i(128, 64)
1:4/size_in_atlas = Vector2i(2, 2)
1:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cm6ax"]
texture = ExtResource("17_05m6f")
texture_region_size = Vector2i(128, 64)
1:4/size_in_atlas = Vector2i(2, 2)
1:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u5bb5"]
texture = ExtResource("18_0njcp")
texture_region_size = Vector2i(128, 64)
1:4/size_in_atlas = Vector2i(2, 2)
1:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bkeym"]
texture = ExtResource("25_68ni3")
texture_region_size = Vector2i(128, 64)
1:4/size_in_atlas = Vector2i(2, 2)
1:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4nyef"]
texture = ExtResource("19_pqe3v")
texture_region_size = Vector2i(128, 64)
1:4/size_in_atlas = Vector2i(2, 2)
1:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rqyjl"]
texture = ExtResource("20_kxs8x")
texture_region_size = Vector2i(128, 64)
1:4/size_in_atlas = Vector2i(2, 2)
1:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_d0qwb"]
texture = ExtResource("24_64iqy")
texture_region_size = Vector2i(128, 64)
1:4/size_in_atlas = Vector2i(2, 2)
1:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8vawy"]
texture = ExtResource("29_1s16g")
texture_region_size = Vector2i(128, 64)
1:4/size_in_atlas = Vector2i(2, 2)
1:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0fbhu"]
texture = ExtResource("20_xm6x0")
texture_region_size = Vector2i(128, 64)
1:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4pwim"]
texture = ExtResource("34_e1d0o")
texture_region_size = Vector2i(128, 64)
1:4/size_in_atlas = Vector2i(2, 2)
1:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_m2kyr"]
texture = ExtResource("4_by1cd")
texture_region_size = Vector2i(128, 64)
1:4/size_in_atlas = Vector2i(2, 2)
1:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mpvo0"]
texture = ExtResource("5_vinl2")
texture_region_size = Vector2i(128, 64)
1:4/size_in_atlas = Vector2i(2, 2)
1:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6541f"]
texture = ExtResource("6_ydkmn")
texture_region_size = Vector2i(128, 64)
1:4/size_in_atlas = Vector2i(2, 2)
1:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kjx2n"]
texture = ExtResource("7_qdtrj")
texture_region_size = Vector2i(128, 64)
1:4/size_in_atlas = Vector2i(2, 2)
1:4/0 = 0

[sub_resource type="TileSet" id="TileSet_8chwn"]
tile_shape = 1
tile_size = Vector2i(128, 64)
sources/0 = SubResource("TileSetAtlasSource_h1anl")
sources/1 = SubResource("TileSetAtlasSource_7sbks")
sources/2 = SubResource("TileSetAtlasSource_bkeym")
sources/3 = SubResource("TileSetAtlasSource_8vawy")
sources/4 = SubResource("TileSetAtlasSource_0fbhu")
sources/5 = SubResource("TileSetAtlasSource_4pwim")
sources/6 = SubResource("TileSetAtlasSource_m2kyr")
sources/7 = SubResource("TileSetAtlasSource_mpvo0")
sources/8 = SubResource("TileSetAtlasSource_6541f")
sources/9 = SubResource("TileSetAtlasSource_kjx2n")
sources/10 = SubResource("TileSetAtlasSource_jk7s7")
sources/11 = SubResource("TileSetAtlasSource_87815")
sources/12 = SubResource("TileSetAtlasSource_pialb")
sources/13 = SubResource("TileSetAtlasSource_dypqt")
sources/14 = SubResource("TileSetAtlasSource_nd474")
sources/15 = SubResource("TileSetAtlasSource_c2wxs")
sources/16 = SubResource("TileSetAtlasSource_86vqb")
sources/17 = SubResource("TileSetAtlasSource_8uau0")
sources/18 = SubResource("TileSetAtlasSource_cm6ax")
sources/19 = SubResource("TileSetAtlasSource_u5bb5")
sources/20 = SubResource("TileSetAtlasSource_4nyef")
sources/21 = SubResource("TileSetAtlasSource_rqyjl")
sources/22 = SubResource("TileSetAtlasSource_d0qwb")

[node name="Level" type="Node2D"]
script = ExtResource("1_ptxdy")

[node name="GroundTileMap" parent="." node_paths=PackedStringArray("object_tile_map") instance=ExtResource("2_go2fb")]
object_tile_map = NodePath("../DecorationTileMap")

[node name="DecorationTileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = SubResource("TileSet_8chwn")
cell_quadrant_size = 64
format = 2
layer_0/y_sort_enabled = true

[node name="Path" type="Node2D" parent="."]
script = ExtResource("3_yxbnk")

[node name="Enemies" type="Node2D" parent="."]
script = ExtResource("3_gg80f")

[node name="TowerManager" parent="." node_paths=PackedStringArray("level_manager", "ground_tile_map") instance=ExtResource("4_0nnn7")]
level_manager = NodePath("..")
ground_tile_map = NodePath("../GroundTileMap")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="SpawnPoint" type="Node2D" parent="." node_paths=PackedStringArray("path")]
position = Vector2(1052, 286)
script = ExtResource("5_k4o1p")
path = NodePath("../Path")

[node name="WaveTimer" type="Timer" parent="SpawnPoint"]
one_shot = true

[node name="Lights" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Lights"]
transform = Transform3D(0.707107, -0.270598, 0.653281, 0, 0.92388, 0.382683, -0.707107, -0.270598, 0.653281, 1, 1, 1)
light_color = Color(0.909804, 0.72549, 0.529412, 1)
directional_shadow_mode = 0
sky_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" parent="CanvasLayer" instance=ExtResource("6_lr0f1")]
metadata/_edit_use_anchors_ = true

[node name="TowerSelect" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/TowerSelect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 10
alignment = 1

[node name="CrossbowSelect" parent="CanvasLayer/TowerSelect/HBoxContainer" instance=ExtResource("7_hdo0l")]
layout_mode = 2
tower = ExtResource("8_3xcyr")
separation = 20

[node name="MageSelect" parent="CanvasLayer/TowerSelect/HBoxContainer" instance=ExtResource("7_hdo0l")]
layout_mode = 2
tower = ExtResource("9_nsuvv")
separation = 20

[node name="MortarSelect" parent="CanvasLayer/TowerSelect/HBoxContainer" instance=ExtResource("7_hdo0l")]
layout_mode = 2
tower = ExtResource("10_k873e")
separation = 20

[node name="LevelWonPopup" type="PopupPanel" parent="CanvasLayer"]
size = Vector2i(139, 104)
script = ExtResource("11_6jv2p")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/LevelWonPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 135.0
offset_bottom = 100.0

[node name="Label" type="Label" parent="CanvasLayer/LevelWonPopup/VBoxContainer"]
layout_mode = 2
text = "You Won!"
horizontal_alignment = 1

[node name="NextLevelButton" type="Button" parent="CanvasLayer/LevelWonPopup/VBoxContainer"]
layout_mode = 2
text = "Next"

[node name="MenuButton" type="Button" parent="CanvasLayer/LevelWonPopup/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="GameOverPopup" type="PopupPanel" parent="CanvasLayer"]
size = Vector2i(139, 104)
script = ExtResource("12_oow63")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameOverPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 135.0
offset_bottom = 100.0

[node name="Label" type="Label" parent="CanvasLayer/GameOverPopup/VBoxContainer"]
layout_mode = 2
text = "Game Over :("
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="CanvasLayer/GameOverPopup/VBoxContainer"]
layout_mode = 2
text = "Retry"

[node name="MenuButton" type="Button" parent="CanvasLayer/GameOverPopup/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="SpeedButton" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -46.0
offset_top = -51.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Button" type="Button" parent="CanvasLayer/SpeedButton"]
layout_mode = 2
text = "1x"

[node name="NextWaveButton" type="MarginContainer" parent="CanvasLayer" node_paths=PackedStringArray("parent", "timer")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -25.5
offset_right = 56.0
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("37_1m24x")
parent = NodePath("../../SpawnPoint")
timer = NodePath("../../SpawnPoint/WaveTimer")

[node name="NextWaveButton" type="Button" parent="CanvasLayer/NextWaveButton"]
layout_mode = 2
text = "Start"

[connection signal="all_enemies_defeated" from="Enemies" to="." method="_on_enemies_all_enemies_defeated"]
[connection signal="enemy_died" from="Enemies" to="." method="_on_enemies_enemy_died"]
[connection signal="enemy_reached_end" from="Enemies" to="." method="_on_enemies_enemy_reached_end"]
[connection signal="tower_placed" from="TowerManager" to="." method="_on_tower_manager_tower_placed"]
[connection signal="all_enemies_spawned" from="SpawnPoint" to="Enemies" method="_on_spawn_point_all_enemies_spawned"]
[connection signal="enemy_spawned" from="SpawnPoint" to="Enemies" method="_on_spawn_point_enemy_spawned"]
[connection signal="new_wave" from="SpawnPoint" to="." method="_on_spawn_point_new_wave"]
[connection signal="wave_finished" from="SpawnPoint" to="." method="_on_spawn_point_wave_finished"]
[connection signal="timeout" from="SpawnPoint/WaveTimer" to="SpawnPoint" method="_on_wave_timer_timeout"]
[connection signal="tower_selected" from="CanvasLayer/TowerSelect/HBoxContainer/CrossbowSelect" to="TowerManager" method="_on_tower_selected"]
[connection signal="tower_selected" from="CanvasLayer/TowerSelect/HBoxContainer/MageSelect" to="TowerManager" method="_on_tower_selected"]
[connection signal="tower_selected" from="CanvasLayer/TowerSelect/HBoxContainer/MortarSelect" to="TowerManager" method="_on_tower_selected"]
[connection signal="popup_hide" from="CanvasLayer/LevelWonPopup" to="CanvasLayer/LevelWonPopup" method="_on_popup_hide"]
[connection signal="pressed" from="CanvasLayer/LevelWonPopup/VBoxContainer/NextLevelButton" to="CanvasLayer/LevelWonPopup" method="_on_next_level_button_pressed"]
[connection signal="pressed" from="CanvasLayer/LevelWonPopup/VBoxContainer/MenuButton" to="CanvasLayer/LevelWonPopup" method="_on_menu_button_pressed"]
[connection signal="popup_hide" from="CanvasLayer/GameOverPopup" to="CanvasLayer/GameOverPopup" method="_on_popup_hide"]
[connection signal="pressed" from="CanvasLayer/GameOverPopup/VBoxContainer/RetryButton" to="CanvasLayer/GameOverPopup" method="_on_retry_button_pressed"]
[connection signal="pressed" from="CanvasLayer/GameOverPopup/VBoxContainer/MenuButton" to="CanvasLayer/GameOverPopup" method="_on_menu_button_pressed"]
[connection signal="pressed" from="CanvasLayer/SpeedButton/Button" to="." method="_on_button_pressed"]
[connection signal="next_wave_button_pressed" from="CanvasLayer/NextWaveButton" to="." method="_on_next_wave_button_next_wave_button_pressed"]
[connection signal="next_wave_button_pressed" from="CanvasLayer/NextWaveButton" to="SpawnPoint" method="_on_next_wave_button_next_wave_button_pressed"]
[connection signal="pressed" from="CanvasLayer/NextWaveButton/NextWaveButton" to="CanvasLayer/NextWaveButton" method="_on_next_wave_button_pressed"]
